# Livebank

./: .gitignore  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/api/: .env.example  .gitignore  Dockerfile  README.md  bank  manage.py  pyproject.toml  requirements.txt
apps/api/account/: models.py
apps/api/account/migrations/: 0001_initial.py
apps/api/authentication/: models.py  permissions.py  views.py
apps/api/authentication/api/: __init__.py  serializers.py  viewsets.py
apps/api/authentication/migrations/: 0001_initial.py  0002_alter_usermodel_account_number.py
apps/api/bank_operations/: apps.py  models.py  urls.py
apps/api/bank_operations/api/: serializers.py  viewsets.py
apps/api/bank_operations/migrations/: 0001_initial.py  0004_card.py
apps/api/core/: settings.py  urls.py
apps/poc-api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  dev.sh  docker-compose.yml  docker.sh  manage.py  pyproject.toml  requirements.txt
apps/poc-api/authentication/: models.py
apps/poc-api/authentication/api/: viewsets.py
apps/poc-api/authentication/migrations/: 0002_usermodel_image.py  0002_usermodel_image_alter_usermodel_id.py
apps/poc-api/bank_operations/: models.py
apps/poc-api/bank_operations/api/: serializers.py  viewsets.py
apps/poc-api/bank_operations/migrations/: 0002_alter_account_balance_transaction.py  0003_deposit.py  0005_loan.py  0007_alter_loan_fee.py  (+5 more)
apps/poc-api/core/: settings.py  urls.py
apps/poc-api/media/: function_uuid4_at_0x000001BFF81222A0-ye.jfif
apps/poc-api/templates/: swagger-ui.html
(+89 files in other folders)
